# sy17

./: .gitignore  README.md  TRACKER.rocket
synth/: Add2.cpp  Add2.h  Add4.cpp  Add4.h  AllNodes.h  Amplitude.cpp  Amplitude.h  BeatTimer.cpp  BeatTimer.h  BiquadFilter.cpp  BiquadFilter.h  BiquadHighPassFilter.cpp  BiquadHighPassFilter.h  BiquadLowPassFilter.cpp  BiquadLowPassFilter.h  BiquadPeakFilter.cpp  BiquadPeakFilter.h  Clamp.cpp  Clamp.h  CommonBiquadFilter.cpp  CommonBiquadFilter.h  CommonOscillator.cpp  CommonOscillator.h  DbToLinear.cpp  DbToLinear.h  Delay.cpp  Delay.h  DirectSoundPlayer.cpp  DirectSoundPlayer.h  Divide.cpp  Divide.h  Export.cpp  Export.h  InputData.h  Instrument.cpp  Instrument.h  LinearToDb.cpp  LinearToDb.h  Max.cpp  Max.h  (+50 more)
tool/: CMakeLists.txt  LICENSE  debug.h  list.h  main.cpp  metadata.h  util.cpp  util.h  vector.h
tool/demo/: demowindow.cpp  demowindow.h
tool/env/: math.cpp  newdel.cpp
tool/geom/: generators.cpp  generators.h  mesh.cpp  mesh.h  plane.cpp  plane.h  polygon.cpp  polygon.h  vertex.cpp  vertex.h
tool/imgui/: imconfig.h  imgui_dock.cpp  imgui_dock.h  imgui_gl.cpp  imgui_gl.h  imgui_user.h
tool/player/: Dialog1.rc  debug.cpp  def.h  export.h  resource.h
tool/player/renderer/: camera.cpp  implementations.cpp  program.cpp  program.h  shader.cpp  shader.h  timer.cpp  timer.h
tool/player/time/: timemanager.cpp  track_.cpp
tool/player/ui/: runtime.cpp
tool/procedural/: diamondsquaregenerator.cpp  diamondsquaregenerator.h  distributedsquaregenerator.cpp  distributedsquaregenerator.h  noisegenerator.cpp  noisegenerator.h  obeliskgenerator.cpp  obeliskgenerator.h  rockgenerator.cpp  rockgenerator.h
tool/renderer/: camera.cpp  camera.h  common.h  context.cpp  context.h  defines.h  directionallight.cpp  directionallight.h  extfuncs.cpp  feedbackobject.cpp  feedbackobject.h  framebuffer.cpp  framebuffer.h  gl.h  glext.h  locatable.h  object.cpp  object.h  pingpong.cpp  pingpong.h  rawobject.cpp  rawobject.h  scene.h  shadertypes.h  texture.cpp  texture.h  ubo.cpp  ubo.h  uniform.cpp  uniform.h  uniformbuffer.cpp  uniformbuffer.h
tool/scenes/: declarations.h  includes.h  marsTestScene.cpp  marsTestScene.h  rover.cpp  rover.h
tool/shaders/: box4.frag  copy.frag  foilBumpmap.glsl  gauss21.frag  getNormal.geom  identity2.vert  marsHeightmap.glsl  metalBumpmap.glsl  obelisk.vert  obeliskBumpmap.glsl  raster.frag  raster.vert  rockBumpmap.glsl  ssao.frag
tool/shaders/common/: bump3d.glsl  camera_data.glsl  getCliffAmount.glsl  getLightIntensity.glsl  getRay.glsl  light_data.glsl  lighting.glsl  linearizeDepth.glsl  mapNormal.glsl  materialMix.glsl  materials.glsl  math.glsl  minResult.glsl  noise.glsl  obeliskGlow.glsl  object_data.glsl  rasterFrag.glsl  rasterRaymarch.glsl  rasterVert.glsl  raymarchLoop.glsl  raymarchNormal.glsl  rover_data.glsl  sceneAfter.glsl  sceneBefore.glsl  scene_data.glsl  sdf.glsl  structs.glsl  terrain_data.glsl  unlinearizeDepth.glsl  unproject.glsl  writePoint.glsl
tool/shaders/debug/: lightFrustum.frag  lightFrustum.vert
tool/shaders/laser/: laser.frag  laser.vert
tool/shaders/materials/: dirtyMetal.glsl  foil.glsl  laser.glsl  metal.glsl  obelisk.glsl  obeliskI1.glsl  obeliskI2.glsl  rock.glsl  rocket.glsl  solar.glsl  solidRough.glsl  terrain.glsl
tool/shaders/post/: bloomblur.frag  bloomcomposite.frag  composite.frag  dof.frag  flaredownsample.frag  flaregen.frag  fxaa.frag  motionblur.frag
tool/shaders/rock/: generator.tesc  generator.tese  generator.vert  render.vert
tool/shaders/rocket/: march.frag
tool/shaders/rover/: bound.vert  march.frag  tracks.glsl
tool/shaders/scenes/: marsTest.frag  scene1.frag
tool/shaders/terrain/: control.tesc  evaluate.tese  instanced.vert  shade.frag
tool/time/: base.h  device.h  sync.h  timemanager.cpp  timemanager.h  track.cpp  track.h  track_.cpp  track_.h
tool/tool/: debug.cpp  def.h
tool/tool/dependency/: shaderdependency.cpp  shaderdependency.h  shadermanager.cpp  shadermanager.h  util.cpp  util.h
tool/tool/export/: exporter.cpp  exporter.h  journals.h
tool/tool/renderer/: camera.cpp  implementations.cpp  program.cpp  program.h  shader.cpp  shader.h  timer.cpp  timer.h
tool/tool/time/: bass_timemanager.cpp  device.cpp  timemanager.cpp  track_.cpp
tool/tool/ui/: runtime.cpp  toolwindow.cpp  toolwindow.h
tool/ui/: runtime.h
tool/units/: bloomblurunit.cpp  bloomblurunit.h  bloomunit.cpp  bloomunit.h  compositeunit.cpp  compositeunit.h  directionallightunit.cpp  directionallightunit.h  dofunit.cpp  dofunit.h  flareunit.cpp  flareunit.h  fxaaunit.cpp  fxaaunit.h  irenderable.h  motionblurunit.cpp  motionblurunit.h  postunit.cpp  postunit.h  sceneunit.cpp  sceneunit.h  ssaounit.cpp  ssaounit.h
